--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">simple_dictionary</string>
 
     <!--- Common region -->
-    <string name="splashscreen_error_something_wrong_description">Something went wrong. /n Please, wait and repeat later</string>
+    <string name="splashscreen_error_something_wrong_description">Something went wrong. \nPlease, wait and repeat later</string>
     <string name="splashscreen_error_title">Error :(</string>
 
     <!--- end Splashscreen region -->
